name: ks-rest
version: 1.10
cabal-version: >=1.10
build-type: Simple
license: ISC
license-file: LICENSE
copyright: 2015 Dino Morelli
maintainer: dino@ui3.info
synopsis: REST server for KitchenSnitch
description:
    REST server for the KitchenSnitch project. This server is for accessing the back-end KS database data which is currently stored in a MongoDB instance.
category: Network
author: Dino Morelli
data-files:
    resources/bin/stress.sh
    resources/ks-rest.conf
extra-source-files:
    changelog.md
    README.md
    util/install.sh

executable ks-rest
    main-is: ks-rest.hs
    build-depends:
        base >=3 && <5,
        aeson ==0.9.*,
        bson >=0.3.2.1 && <0.4,
        bson-generic >=0.0.8.1 && <0.1,
        bytestring >=0.10.6.0 && <0.11,
        either >=4.4.1 && <4.5,
        fast-logger >=2.4.1 && <2.5,
        filepath >=1.4.0.0 && <1.5,
        hslogger >=1.2.9 && <1.3,
        http-types ==0.9.*,
        ks-library >=1.5,
        mongoDB <=2.0.8,
        mtl >=2.2.1 && <2.3,
        servant-docs >=0.4.4.6 && <0.5,
        servant-server >=0.4.4.6 && <0.5,
        tce-conf ==1.1.*,
        text >=1.2.1.3 && <1.3,
        time >=1.5.0.1 && <1.6,
        transformers >=0.4.2.0 && <0.5,
        wai >=3.0.5.0 && <3.1,
        wai-extra >=3.0.13.1 && <3.1,
        warp >=3.1.12 && <3.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules:
        KS.Rest.APIKey
        KS.Rest.Config
        KS.Rest.Handler.Latest
        KS.Rest.Handler.SearchByLoc
        KS.Rest.Inspections.ByName
        KS.Rest.Inspections.ByPlaceID
        KS.Rest.Inspections.BySource
        KS.Rest.Log
        KS.Rest.Stats.Latest
        KS.Rest.Types
        KS.Rest.Util
        KS.Rest.Version
    ghc-options: -Wall

executable ks-api-keygen
    main-is: ks-api-keygen.hs
    build-depends:
        base >=3 && <5,
        bytestring >=0.10.6.0 && <0.11,
        SHA >=1.6.4.2 && <1.7,
        text >=1.2.1.3 && <1.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Rest.APIKey
        KS.Rest.Config
        KS.Rest.Log
    ghc-options: -Wall

