name: ks-rest
version: 1.16
cabal-version: >=1.10
build-type: Simple
license: ISC
license-file: LICENSE
copyright: 2015 Dino Morelli
maintainer: dino@ui3.info
synopsis: REST server for KitchenSnitch
description:
    REST server for the KitchenSnitch project. This server is for accessing the back-end KS database data which is currently stored in a MongoDB instance.
category: Network
author: Dino Morelli
data-files:
    resources/bin/stress.sh
    resources/ks-rest.conf
extra-source-files:
    changelog.md
    README.md
    util/install.sh

source-repository head
    type: darcs
    location: http://hub.darcs.net/dino/ks-rest

executable ks-rest
    main-is: ks-rest.hs
    build-depends:
        base >=3 && <5,
        aeson -any,
        bson -any,
        bson-generic -any,
        bytestring -any,
        fast-logger -any,
        filepath -any,
        hslogger -any,
        http-types -any,
        ks-library -any,
        mongoDB -any,
        mtl -any,
        resource-pool -any,
        servant-docs -any,
        servant-server -any,
        tce-conf -any,
        text -any,
        time -any,
        transformers -any,
        wai -any,
        wai-extra -any,
        warp -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings
    hs-source-dirs: src
    other-modules:
        KS.Rest.APIKey
        KS.Rest.Config
        KS.Rest.Handler.Feedback
        KS.Rest.Handler.InspAllName
        KS.Rest.Handler.InspAllPlaceIDCap
        KS.Rest.Handler.InspRecentNear
        KS.Rest.Handler.InspRecentPlaceID
        KS.Rest.Handler.InspSorted
        KS.Rest.Handler.StatsLatest
        KS.Rest.Handler.Version
        KS.Rest.Log
        KS.Rest.Types
        KS.Rest.Util
    ghc-options: -Wall

executable ks-api-keygen
    main-is: ks-api-keygen.hs
    build-depends:
        base >=3 && <5,
        bytestring -any,
        SHA -any,
        text -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        KS.Rest.APIKey
        KS.Rest.Config
        KS.Rest.Log
    ghc-options: -Wall

