name:                ks-server
version:             1.1
synopsis:            REST server for KitchenSnitch
-- description:         
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2015 Dino Morelli
category:            Network
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  doc/dev/notes.md
                     README.md
                     TODO.md

executable ks-server
   main-is:             ks-server.hs
   other-modules:       KS.Server.Config
                        KS.Server.Handler.Location
                        KS.Server.Handler.Name
                        KS.Server.Handler.PlaceId
                        KS.Server.Handler.Source
                        KS.Server.Log
   build-depends:         base >=4.8 && <4.9
                        , aeson-bson
                        , filepath
                        , hslogger
                        , http-types
                        , ks-library >= 1.2
                        , mongoDB
                        , scotty
                        , tce-conf
                        , text
                        , transformers
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings

executable ks-api-keygen
   main-is:          ks-api-keygen.hs
   other-modules:    KS.Server.Config
                     KS.Server.Log
   build-depends:      base >=4.8 && <4.9
                     , bytestring
                     , SHA
                     , text
   hs-source-dirs:   src
   ghc-options:      -Wall
   default-language: Haskell2010
