name:                ks-server
version:             1.6
synopsis:            REST server for KitchenSnitch
description:         REST server for the KitchenSnitch project. This server is for accessing the back-end KS database data which is currently stored in a MongoDB instance.
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2015 Dino Morelli
category:            Network
build-type:          Simple
cabal-version:       >=1.10

data-files:          resources/bin/stress.sh
                     resources/ks-server.conf

extra-source-files:  changelog.md
                     README.md

executable ks-server
   main-is:             ks-server.hs
   other-modules:       KS.Server.Config
                        KS.Server.Handler.Location
                        KS.Server.Handler.Name
                        KS.Server.Handler.PlaceId
                        KS.Server.Handler.Source
                        KS.Server.Handler.Version
                        KS.Server.Log
   build-depends:         base >=4.8 && <4.9
                        , aeson-bson
                        , fast-logger
                        , filepath
                        , hslogger
                        , http-types
                        , ks-library >= 1.2
                        , mongoDB <= 2.0.8
                        , scotty
                        , tce-conf
                        , text
                        , transformers
                        , wai
                        , wai-extra
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings

executable ks-api-keygen
   main-is:          ks-api-keygen.hs
   other-modules:    KS.Server.Config
                     KS.Server.Log
   build-depends:      base >=4.8 && <4.9
                     , bytestring
                     , SHA
                     , text
   hs-source-dirs:   src
   ghc-options:      -Wall
   default-language: Haskell2010
