name:                ks-server
version:             1.8
synopsis:            REST server for KitchenSnitch
description:         REST server for the KitchenSnitch project. This server is for accessing the back-end KS database data which is currently stored in a MongoDB instance.
license:             ISC
license-file:        LICENSE
author:              Dino Morelli
maintainer:          dino@ui3.info
copyright:           2015 Dino Morelli
category:            Network
build-type:          Simple
cabal-version:       >=1.10

data-files:          resources/bin/stress.sh
                     resources/ks-server.conf

extra-source-files:  changelog.md
                     README.md

executable ks-server
   main-is:             ks-server.hs
   other-modules:       KS.Server.Config
                        KS.Server.Inspections.ByLoc
                        KS.Server.Inspections.ByName
                        KS.Server.Inspections.ByPlaceID
                        KS.Server.Inspections.BySource
                        KS.Server.Log
                        KS.Server.Stats.Latest
                        KS.Server.Types
                        KS.Server.Version
   build-depends:         base >=3 && <5
                        , aeson ==0.9.*
                        , aeson-bson >=0.3.1 && <0.4
                        , bson >=0.3.2.1 && <0.4
                        , bson-generic >=0.0.8.1
                        , bytestring >=0.10.6.0 && <0.11
                        , either >=4.4.1
                        , fast-logger >=2.4.1 && <2.5
                        , filepath >=1.4.0.0 && <1.5
                        , hslogger >=1.2.9 && <1.3
                        , http-types ==0.9.*
                        , ks-library >=1.4
                        , mongoDB <=2.0.8
                        , mtl >=2.2.1 && <2.3
                        , servant-docs
                        , servant-server >=0.4.4 && <0.5
                        , tce-conf ==1.1.*
                        , text ==1.2.1.*
                        , time >=1.5.0.1 && <1.6
                        , transformers >=0.4.2.0 && <0.5
                        , wai >=3.0.4.0 && <3.1
                        , wai-extra >=3.0.13 && <3.1
                        , warp >=3.1.12 && <3.2
   hs-source-dirs:      src
   ghc-options:         -Wall
   default-language:    Haskell2010
   default-extensions:  OverloadedStrings

executable ks-api-keygen
   main-is:          ks-api-keygen.hs
   other-modules:    KS.Server.Config
                     KS.Server.Log
   build-depends:      base >=3 && <5
                     , bytestring >=0.10.6.0 && <0.11
                     , SHA >=1.6.4.2 && <1.7
                     , text ==1.2.1.*
   hs-source-dirs:   src
   ghc-options:      -Wall
   default-language: Haskell2010
